<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home__"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            />
    </group>
    <item android:title="Commands">
        <menu>
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/log_out" />
            <item
                android:id="@+id/exist"
                android:icon="@drawable/ic_exist"
                android:title="Exist" />
        </menu>

    </item>

</menu>