<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/_80_5dp"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"


            />

        <EditText
            android:id="@+id/name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/birthday"

            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Birthday"
            android:background="#F8F6F6"
            android:textStyle="italic"
            android:shadowColor="@color/colorPrimary"
            />
        <Button
            android:layout_gravity="center"
            android:id="@+id/submit"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="#F8F6F6"
            android:text="Submit"
            android:textStyle="italic"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>